Update from terminal

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.687.0",
     "@aws-sdk/s3-request-presigner": "^3.693.0",
+    "@contentful/rich-text-react-renderer": "^16.1.0",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
